# schema

./: .gitignore  2iqk.md  2nd5.md  2nse.md  2nx5.md  325x.md  3dgd.md  3e6n.md  3isv.md  3kqu.md  3nhn.md  3nxl.md  3tmg.md  3vkw.md  44oc.md  4wfn.md  56xf.md  5ar3.md  5c35.md  5epr.md  5hlz.md  5s4i.md  5s5y.md  5snf.md  62ws.md  63e5.md  64l7.md  6bok.md  6yjf.md  7ls2.md  AGENTS.md  KNOWLEDGE_TRANSFER.md  NOTICE  README.md  federation.json  registry.json  this.i  zensical.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  pages.yml
ai-coder/: example.json  index.md
ai-coder/invalid/: a-dt-not-string.json  a-extra-prop.json  a-missing-effective_dt.json  edge-operator-wrong-const.json  missing-top-s.json  top-extra-prop.json
ai-user-coca/invalid/: a-extra-prop.json  a-missing-coc.json  a-missing-issuee.json  a-not-object.json
attestation/: index.md
attestation/invalid/: a-dt-bad-format.json  a-extra-prop.json  a-missing-digest.json  a-said-null.json  top-extra-prop.json
award/: example.json  index.md
award/invalid/: a-dt-not-string.json  a-missing-award_name.json  top-extra-prop.json
bindkey/invalid/: a-missing-pubkey.json  top-extra-prop.json  uses-duplicate-uniqueitems.json  uses-empty-minitems.json  uses-item-too-short-pattern.json  uses-item-uppercase-pattern.json
citation/invalid/: a-missing-dt.json  rules-wrong-const.json  siz-not-integer.json
docs/: choosing-attribute-vs-aggregate.md  methodology.md  style.md
dossier-base/: dossier-base.json
faa/: example.json  faa.schema.json  index.md
faa/invalid/: a-dt-bad-format.json  art_digest-bad-said-pattern.json  art_posture-bad-enum.json  content_location-array-bad-uri.json  content_location-bad-uri.json  content_location-empty-minitems.json  content_type-uppercase-pattern.json  d-bad-said-pattern.json  rev_latency-negative-minimum.json  s-bad-said-pattern.json
face-to-face/: example.json  face-to-face.schema.json  index.md
gcd/: example.json  gcd.schema.json  index.md  rules.json
proof-of-control/: index.md  proof-of-control.schema.json
sedi-age/: example.json  index.md  sedi-age.schema.json
sedi-guardian/: example.json  index.md  rules.json  sedi-guardian.schema.json
sedi-id/: example.json  index.md  rules.json  sedi-id.schema.json
sedi-present-age-portrait/: example.json  index.md  sedi-present-age-portrait.schema.json
spec/: acdc-schema-registry.schema.json
tools/py/: README.md  pyproject.toml
tools/py/src/schematools/: __init__.py  checks.py  cli.py  publish.py  repo.py  said.py
tools/py/tests/: conftest.py  support.py
tools/py/tests/conformance/: test_corpus.py
tools/py/tests/unit/: test_checks.py  test_cli.py  test_publish.py  test_repo.py  test_sad.py  test_said.py
(+95 files in other folders)
