[project]
name = "schematools"
version = "0.1.0"
description = "ACDC / JSON-Schema authoring and conformance tooling for a schema repo"
readme = "README.md"
requires-python = ">=3.12.2"
# keri is the SAID conformance oracle (this.i @xv4m7d). The pin is EXACT: a
# different keri could silently change every SAID. 1.2.13 is verified
# SAID-identical to the corpus's minting version (this.i @m4vd7s).
dependencies = [
    "keri==1.2.13",
    # format-nongpl (not [format]) enables date-time/uri format ASSERTION in
    # instance validation without pulling GPL rfc3987 (this.i @f4mt6k).
    "jsonschema[format-nongpl]>=4.21",
]

[project.scripts]
schematools = "schematools.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]
# Docs-site generator (this.i @z5nc4d). Not a default group: only the Pages
# build installs it. Pinned because Zensical is young (0.0.x) and may churn.
docs = [
    "zensical==0.0.50",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/schematools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Strict TDD at 100% branch coverage of new code is an always-on Bakobo standard
# (AGENTS.md). CI and local runs both enforce it.
addopts = "--cov=schematools --cov-branch --cov-report=term-missing --cov-fail-under=100"
# keri 1.2.x emits cosmetic SyntaxWarnings from its own regex literals on
# newer Pythons; silence them so real warnings stay visible.
filterwarnings = [
    "ignore::SyntaxWarning",
]

[tool.coverage.report]
# The module-execution guard is not a unit-testable branch.
exclude_also = ["if __name__ == .__main__.:"]
